Table tags {
  id int
  name string
  interest_id int [ref: > interesting_things.id]
}

Table teams {
  id int
  name string
  is_community boolean
}

Table interesting_things {
  id int
  name string
  description varchar
  kind ENUM
  team_id int [ref: > teams.id]
}

Table blips {
  id int
  blipped_on date
  interest_id int [ref: > interesting_things.id]
  team_id int [ref: > teams.id]
  stage ENUM
}